--- a/week2/example-2/index.html
+++ b/week2/example-2/index.html
@@ -9,7 +9,7 @@
       <div id="main-container">
         <p>I'm a first paragraph</p>
 
-        <p id="second-paragraph">I'm another paragraph with an HTML 'id' attribute</p>
+        <p id="second-paragraph">I'm another paragraph with an HTML 'id' attribute.</p>
       </div>
 
       <script src="bundle.js"></script>
