--- a/week2/notes_app/index.html
+++ b/week2/notes_app/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <h1>Notes app</h1>
+
+    <input type="text" id="note-input" />
+    <button id="add-note-btn">Add a note</button>
+
     <div id="main-container">
 
 
