--- a/week2/example-4/index.html
+++ b/week2/example-4/index.html
@@ -16,6 +16,8 @@
         <h3 id="repo-name"></h3>
 
         <p id="repo-description"></p>
+
+        <img id="img" >
       </div>
 
       <script src="bundle.js"></script>
